2011-06-11  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #27374: Constant Editor crashes with NULL pointer exception

2011-06-10  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #27344: Add support for block ranges

2011-06-06  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #27263: Add "Select all/none" for blocks
	* [TASK] Thrown error when inconsistency between organization and community files is detected
	* [BUGFIX] #27237: Constant Editor crashes when egovapi DAO is NULL

2011-05-30  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Made the default form template w3-compliant

2011-05-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Updated documentation with latest configuration options
	* [TASK] Added TS option to return organization coordinates

2011-05-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Dramatically improved AJAX response time
	* [TASK] Added support for latitude/longitude coordinates of organizations

2011-05-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Refactored cache class to allow it to be used by pi2 to speed up AJAX calls
	* [TASK] Set default WS language based on config.language
	* [TASK] Updated PDF documentation and optmized it to reduce file size
	* [TASK] Added TypoScript configuration sample for generating legacy parametrized URL
2011-05-25  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Removed duplicated Confederation services
	* [TASK] Fall back to Confederation services when an organization is not yet configured
	* [BUGFIX] Version was not taken into account

2011-05-24  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Updated documentation for selector form
	* [TASK] Enhanced URL generation with TypoScript

2011-05-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Generated parametrized URI's
	* [TASK] Added dynamic retrieval of services
	* [TASK] Added dynamic retrieval of organizations
	* [TASK] Removed global declaration with XCLASS definition