@@ -1,5 +1,6 @@
 2011-06-11  Xavier Perseguers  <xavier@causal.ch>
 
+	* [BUGFIX] #27373: Remove duplicate services
 	* [BUGFIX] #27374: Constant Editor crashes with NULL pointer exception
 
 2011-06-10  Xavier Perseguers  <xavier@causal.ch>
